# YUI

./: .gitignore  .webui_secret_key  ARCHITECTURE.md  CLAUDE.md  INSTALL.md  MANIFEST.in  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml  setup.py  setup.sh
backend/: .env.example  Dockerfile  main.py  requirements.txt  start.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatPanel.tsx  ContextMenu.tsx  ConversationItem.tsx  FolderTree.tsx  Message.tsx  ModelSourcesPanel.tsx  SettingsPanel.tsx  Sidebar.tsx
frontend/src/services/: api.ts  dbApi.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts  storage.ts
scripts/: build_frontend.py  create_offline_package.sh
yuichatbox/: __init__.py  __main__.py  api_routes.py  cli.py  config.py  database.py  file_parsers.py  server.py
yuichatbox/migrations/: add_folders.sql
